--- a/app/src/main/res/layout-w900dp/activity_stock_list.xml
+++ b/app/src/main/res/layout-w900dp/activity_stock_list.xml
@@ -19,6 +19,12 @@
     -->
 
 
+    <FrameLayout
+        android:id="@+id/stock_detail"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="2" >
+
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/stock_list"
@@ -46,7 +52,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:text="@string/empty_stock_list" />
 
-
+</FrameLayout>
 
 
     <FrameLayout
