- add company column in database - add content description to stock list

--- a/app/src/main/res/layout/stock_detail.xml
+++ b/app/src/main/res/layout/stock_detail.xml
@@ -6,4 +6,5 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:textIsSelectable="true"
+    android:text="HAHAHAHAH"
     tools:context="com.sam_chordas.android.stockhawk.detail_flow.StockDetailFragment" />
