--- a/app/src/main/res/layout-w900dp/activity_stock_list.xml
+++ b/app/src/main/res/layout-w900dp/activity_stock_list.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
@@ -33,6 +35,8 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         app:layoutManager="LinearLayoutManager"
         tools:context="com.sam_chordas.android.stockhawk.detail_flow.StockListActivity"
         android:layout_weight="2" />
