--- a/app/src/main/res/layout/activity_stock_list.xml
+++ b/app/src/main/res/layout/activity_stock_list.xml
@@ -15,6 +15,8 @@
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.sam_chordas.android.stockhawk.detail_flow.StockListActivity"/>
 
