--- a/app/src/main/res/layout/stock_detail.xml
+++ b/app/src/main/res/layout/stock_detail.xml
@@ -14,7 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
-        app:cardElevation="15dp">
+        app:cardElevation="15dp"
+        android:layout_margin="@dimen/stock_detail_margin"
+        >
 
 
         <LinearLayout
