--- a/app/src/main/res/layout/widget_stocks.xml
+++ b/app/src/main/res/layout/widget_stocks.xml
@@ -23,11 +23,12 @@
         android:layout_height="match_parent"
         >
 
-        <android.support.v7.widget.RecyclerView
+
+        <!-- ListView to be shown on widget -->
+        <ListView
             android:id="@+id/list_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
 
 
         <!-- empty list -->
@@ -47,3 +48,4 @@
     </FrameLayout>
 
 </LinearLayout>
+
