--- a/app/src/main/res/layout/widget_stocks.xml
+++ b/app/src/main/res/layout/widget_stocks.xml
@@ -21,6 +21,7 @@
         xmlns:fab="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/widget"
         >
 
 
@@ -35,7 +36,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recyclerview_stocks_empty"
+            android:id="@+id/widget_empty"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
