--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,12 @@
     <item name="android:textColor">#FFF</item>
   </style>
 
+  <style name="WidgetTextStyle">
+    <item name="android:textSize">15sp</item>
+    <item name="android:textAllCaps">true</item>
+    <item name="android:textColor">#FFF</item>
+  </style>
+
+
+
 </resources>
