--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
 
   <color name="activated">#E0E0E0</color>
   <color name="widget_color">#55000000</color>
+  <color name="white">#FFFFFF</color>
 </resources>
