--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -17,6 +17,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="left|center_vertical"
+      android:paddingStart="5dp"
+      android:paddingEnd="5dp"
       tools:text="GOOG"
       />
   <LinearLayout
@@ -24,14 +26,16 @@
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:gravity="right"
+      android:paddingStart="5dp"
+      android:paddingEnd="5dp"
       >
     <TextView
         android:id="@+id/bid_price"
         style="@style/BidPriceTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="10sp"
-        android:paddingEnd="10sp"
+        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         tools:text="1000.00"
         />
     <TextView
