--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="stock_detail_margin">15dp</dimen>
+    <dimen name="heading_item_extra_padding">15dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
 </resources>
