--- a/app/src/main/res/layout/activity_stock_list.xml
+++ b/app/src/main/res/layout/activity_stock_list.xml
@@ -4,6 +4,11 @@
     xmlns:fab="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/list_item_extra_padding"
+    android:paddingRight="@dimen/list_item_extra_padding"
+    android:paddingStart="@dimen/list_item_extra_padding"
+    android:paddingEnd="@dimen/list_item_extra_padding"
+
     >
 
 <android.support.v7.widget.RecyclerView
