--- a/app/src/main/res/layout-w900dp/activity_stock_list.xml
+++ b/app/src/main/res/layout-w900dp/activity_stock_list.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
@@ -24,60 +24,58 @@
         android:name="com.sam_chordas.android.stockhawk.detail_flow.StockListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-
-
-        android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginLeft="5dp"
 
+
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="5dp"
+
+        android:layout_weight="2"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".ui.StockListActivity"
-        android:layout_weight="2" />
+        tools:context=".ui.StockListActivity" />
 
 
-        <!-- empty list -->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/recyclerview_stocks_empty"
-            android:gravity="center_horizontal"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingEnd="@dimen/activity_horizontal_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingStart="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:text="@string/empty_stock_list" />
-
-
+    <!-- empty list -->
+    <TextView
+        android:id="@+id/recyclerview_stocks_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:text="@string/empty_stock_list" />
 
 
     <FrameLayout
         android:id="@+id/stock_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" >
+        android:layout_weight="3">
 
 
-    <com.melnykov.fab.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_add_white_24dp"
-        fab:fab_colorNormal="@color/material_blue_500"
-        fab:fab_colorPressed="@color/material_blue_600"
-        fab:fab_colorRipple="@color/ripple"
-        fab:fab_shadow="true"
-        fab:fab_type="normal"
-        fab:layout_anchor="recycler_view"
-        fab:layout_anchorGravity="bottom | end"
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add_white_24dp"
+            fab:fab_colorNormal="@color/material_blue_500"
+            fab:fab_colorPressed="@color/material_blue_600"
+            fab:fab_colorRipple="@color/ripple"
+            fab:fab_shadow="true"
+            fab:fab_type="normal"
+            fab:layout_anchor="recycler_view"
+            fab:layout_anchorGravity="bottom | end"
 
-        />
+            />
 
-        </FrameLayout>
+    </FrameLayout>
 
 
 </LinearLayout>
