--- a/app/src/main/res/layout/activity_stock_list.xml
+++ b/app/src/main/res/layout/activity_stock_list.xml
@@ -1,37 +1,34 @@
-
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingEnd="@dimen/list_item_extra_padding"
     android:paddingLeft="@dimen/list_item_extra_padding"
     android:paddingRight="@dimen/list_item_extra_padding"
     android:paddingStart="@dimen/list_item_extra_padding"
-    android:paddingEnd="@dimen/list_item_extra_padding"
 
     >
 
-<android.support.v7.widget.RecyclerView
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/stock_list"
-    android:name="com.sam_chordas.android.stockhawk.detail_flow.StockListFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
-    android:paddingBottom="48dp"
-    android:clipToPadding="false"
-    app:layoutManager="LinearLayoutManager"
-    tools:context=".ui.StockListActivity"/>
+    <android.support.v7.widget.RecyclerView xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/stock_list"
+        android:name="com.sam_chordas.android.stockhawk.detail_flow.StockListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:clipToPadding="false"
+        android:paddingBottom="48dp"
+        app:layoutManager="LinearLayoutManager"
+        tools:context=".ui.StockListActivity" />
 
     <!-- empty list -->
     <TextView
+        android:id="@+id/recyclerview_stocks_empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recyclerview_stocks_empty"
         android:gravity="center_horizontal"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
@@ -47,15 +44,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_add_white_24dp"
         android:contentDescription="@string/add_symbol"
+        android:src="@drawable/ic_add_white_24dp"
         fab:fab_colorNormal="@color/material_blue_500"
         fab:fab_colorPressed="@color/material_blue_600"
         fab:fab_colorRipple="@color/ripple"
         fab:fab_shadow="true"
         fab:fab_type="normal"
         fab:layout_anchor="recycler_view"
-        fab:layout_anchorGravity="bottom|right|end"
-        />
+        fab:layout_anchorGravity="bottom|right|end" />
 
 </FrameLayout>
