--- a/app/src/main/res/layout/stock_detail.xml
+++ b/app/src/main/res/layout/stock_detail.xml
@@ -13,15 +13,14 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="15dp"
-            android:layout_marginTop="@dimen/stock_detail_margin"
             android:layout_marginBottom="@dimen/stock_detail_margin"
-            android:layout_marginStart="@dimen/heading_item_extra_padding"
             android:layout_marginEnd="@dimen/heading_item_extra_padding"
             android:layout_marginLeft="@dimen/heading_item_extra_padding"
             android:layout_marginRight="@dimen/heading_item_extra_padding"
-            >
+            android:layout_marginStart="@dimen/heading_item_extra_padding"
+            android:layout_marginTop="@dimen/stock_detail_margin"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="15dp">
 
 
             <LinearLayout
@@ -40,12 +39,12 @@
 
                     <TextView
                         android:id="@+id/txt_symbol"
+                        style="@style/StockSymbolTextStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:gravity="center"
-                        android:hint="YHOO"
-                        style="@style/StockSymbolTextStyle"/>
+                        android:hint="YHOO" />
 
 
                     <TextView
@@ -62,10 +61,10 @@
                 <android.support.v7.widget.CardView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     app:cardBackgroundColor="@android:color/holo_orange_dark"
-                    app:cardCornerRadius="5dp"
-                    android:layout_margin="5dp">
+                    app:cardCornerRadius="5dp">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -116,17 +115,17 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:elevation="12dp"
+        app:layout_collapseMode="pin"
         app:layout_scrollFlags="scroll|enterAlways"
         app:tabBackground="@color/material_blue_500"
-        app:tabSelectedTextColor="@android:color/white"
-        app:tabTextColor="@android:color/white"
-        app:tabMaxWidth="0dp"
         app:tabGravity="fill"
-        app:layout_collapseMode="pin"
-        app:tabMode="fixed"/>
+        app:tabMaxWidth="0dp"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextColor="@android:color/white" />
 
 
     <android.support.v4.view.ViewPager
