--- a/app/src/main/res/layout/widget_list_item.xml
+++ b/app/src/main/res/layout/widget_list_item.xml
@@ -25,8 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="left|center_vertical"
-            tools:text="GOOG"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="GOOG" />
 
         <LinearLayout
             android:layout_width="0dp"
