--- a/app/src/main/res/layout/widget_stocks.xml
+++ b/app/src/main/res/layout/widget_stocks.xml
@@ -1,28 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/widget_margin"
-    android:background="#55000000">
+    android:background="#55000000"
+    android:orientation="vertical"
+    android:padding="@dimen/widget_margin">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:padding="@dimen/activity_horizontal_margin"
         android:text="@string/app_name"
         android:textSize="@dimen/abc_text_size_large_material"
-        android:padding="@dimen/activity_horizontal_margin"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
 
-    <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:fab="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/widget"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
 
         <!-- ListView to be shown on widget -->
@@ -33,9 +30,9 @@
 
         <!-- empty list -->
         <TextView
+            android:id="@+id/widget_empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/widget_empty"
             android:gravity="center_horizontal"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingEnd="@dimen/activity_horizontal_margin"
