--- a/app/src/main/res/menu/my_stocks.xml
+++ b/app/src/main/res/menu/my_stocks.xml
@@ -2,9 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MyStocksActivity">
-  <item android:id="@+id/action_change_units"
-      android:title="@string/action_change_units"
-      android:icon="@drawable/ic_attach_money_white_24dp"
-      android:orderInCategory="99"
-      app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_change_units"
+        android:icon="@drawable/ic_attach_money_white_24dp"
+        android:orderInCategory="99"
+        android:title="@string/action_change_units"
+        app:showAsAction="always" />
 </menu>
