--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -15,18 +15,22 @@
         style="@style/StockSymbolTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|center_vertical"
+        android:gravity="start|center_vertical"
         android:paddingEnd="5dp"
         android:paddingStart="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         tools:text="GOOG" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="right"
+        android:gravity="end"
         android:paddingEnd="5dp"
-        android:paddingStart="5dp">
+        android:paddingStart="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
         <TextView
             android:id="@+id/bid_price"
@@ -35,6 +39,8 @@
             android:layout_height="wrap_content"
             android:paddingEnd="10dp"
             android:paddingRight="10dp"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
             tools:text="1000.00" />
 
         <TextView
