--- a/app/src/main/res/layout-w900dp/activity_stock_list.xml
+++ b/app/src/main/res/layout-w900dp/activity_stock_list.xml
@@ -14,7 +14,6 @@
     <!--
     This layout is a two-pane layout for the Stocks
     master/detail flow.
-    
     -->
 
 
@@ -57,13 +56,13 @@
         android:layout_height="match_parent"
         android:layout_weight="3">
 
-
         <com.melnykov.fab.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
+            android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
+            android:contentDescription="@string/add_symbol"
             android:src="@drawable/ic_add_white_24dp"
             fab:fab_colorNormal="@color/material_blue_500"
             fab:fab_colorPressed="@color/material_blue_600"
@@ -71,9 +70,7 @@
             fab:fab_shadow="true"
             fab:fab_type="normal"
             fab:layout_anchor="recycler_view"
-            fab:layout_anchorGravity="bottom | end"
-
-            />
+            fab:layout_anchorGravity="bottom|end" />
 
     </FrameLayout>
 
