--- a/app/src/main/res/layout/widget_stocks.xml
+++ b/app/src/main/res/layout/widget_stocks.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:padding="@dimen/activity_horizontal_margin"
+        android:padding="5dp"
         android:text="@string/app_name"
         android:textSize="@dimen/abc_text_size_large_material"
         android:textStyle="bold" />
