--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="heading_item_extra_padding">15dp</dimen>
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="widget_margin">8dp</dimen>
+    <dimen name="list_item_extra_padding">2dp</dimen>
 </resources>
